# tree-sitter-demo

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: example.go
src/: main.rs
