[package]
name = "tree-sitter-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { git = "https://github.com/zkat/miette", branch = "release/3.0.0", features = ["fancy"] }
tree-sitter-highlight = "0.20.0"
tree-sitter = "0.20.0"

[build-dependencies]
cc = "1.0.70"
